--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,8 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+do.jlink=false
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Biswajit Debnath\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+jlink.strip=false
+user.properties.file=/Users/coderbd/Library/Application Support/NetBeans/12.2/build.properties
